Run notebook on cluster

--- a/Pipfile
+++ b/Pipfile
@@ -4,13 +4,17 @@ url = "https://pypi.python.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[requires]
+python_version = "3.6.4"
 
 [dev-packages]
 
-
-
 [packages]
 
+"spark" = "*"
+"pyspark" = "*"
 "bs4" = "*"
 numpy = "*"
 "html5lib" = "*"
+statistics = "*"
+sphinx = "*"
